# rep-grafos

./: README.md  exemplo.ipynb  pyproject.toml
.github/workflows/: publish.yml
data/: 001_exp_monte_carlo_fp.data  comp_018_019_espaco.data  comp_grafos_reais_rep_todas_c_12.data  comp_grafos_reais_rep_todas_c_3.data
src/rep_grafos/: __init__.py  rep_graph_mod.py  rep_graph_prob.py  rep_graph_spatial_xor.py  xor_descascavel_by_f.py
tests/: test_rep_graph_mod.py  test_rep_graph_prob.py
